@@ -841,6 +841,8 @@ type_vec_fields get_fields_for_table_from_database(const Glib::ustring& table_na
     Glib::RefPtr<Gnome::Gda::DataModel> data_model_fields;
     try
     {
+      //This should work because we called update_meta_store_tables() in ConnectionPool,
+      //and that gets the tables' fields too.
       data_model_fields = connection->get_meta_store_data(Gnome::Gda::CONNECTION_META_FIELDS, holder_list);
     }
     catch(const Gnome::Gda::MetaStoreError& ex)
@@ -970,6 +972,7 @@ type_vec_strings get_table_names_from_database(bool ignore_system_tables)
     Glib::RefPtr<Gnome::Gda::DataModel> data_model_tables;
     try
     {
+      //This should work because we called update_meta_store_tables() in ConnectionPool.
       data_model_tables = gda_connection->get_meta_store_data(Gnome::Gda::CONNECTION_META_TABLES);
     }
     catch(const Gnome::Gda::MetaStoreError& ex)
